Stop hover gaps in card link.

--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -93,6 +93,7 @@
 
 .card__link {
   color: $color4;
+  display: block;
   text-decoration: none;
   transition: color 0.2s ease-out;
   &:hover,
